# sylow

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.txt  build.rs
.github/workflows/: CI.yml
benches/: field.rs  group.rs  mod.rs  pairing.rs  sig.rs
examples/: ECIES.rs  basic_pairing.rs  const_time.rs  const_time_pairing_check.rs  const_time_signature_check.rs  dkg.rs  dkg.toml  epoch.rs  fields.rs  key.rs  reth_bn128.rs  simple_ecdh.rs  simple_xor_ecies.rs  threshold_signing.rs  verify_multiple_messages_same_signer.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_sylow_api.rs
notebooks/: README.md  alc-research.ipynb  bls.ipynb  field_extensions.ipynb  math-primer.ipynb  math-primer.md  misc.ipynb  pyproject.toml  secret_sharing.ipynb
notebooks/01_background/: 00_notation.ipynb  00_notation.md  01_roadmap.ipynb  01_roadmap.md  02_sets_groups_and_rings.ipynb  02_sets_groups_and_rings.md  03_euclidean_arithmetic.ipynb  03_euclidean_arithmetic.md  04a_fields.ipynb  04a_fields.md  04b_field_extensions.ipynb  04b_field_extensions.md  05_algebraic_geometry.ipynb  05_algebraic_geometry.md
notebooks/02_elliptic_curves/: 01_elliptic_curves.ipynb  01_elliptic_curves.md  02_bn_curves.ipynb  02_bn_curves.md
notebooks/03_bn254/: 01_curve_specifics.ipynb  01_curve_specifics.md  02_bls.ipynb  02_bls.md  03_pairing.ipynb  03_pairing.md
notebooks/04_distributed_keys/: 01_vss.ipynb  01_vss.md  02_dkg.ipynb  02_dkg.md  03_vrf.md
notebooks/05_implementation/: 00_misc.ipynb  00_misc.md
proto/: fp.proto  fp2.proto
src/: dkg.rs  finite_field.rs  hasher.rs  lib.rs  pairing.rs  pairing_v1.rs  proto.rs  scalar.rs  svdw.rs  utils.rs
src/fields/: extensions.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  mod.rs  ref.sage  ref.sage.py  utils.rs
src/fields/sage_reference/: division.sage  facts.sage  frobenius.sage  makefile  multiplication.sage  ref.sage  utils.sage
src/groups/: g1.rs  g2.rs  group.rs  gt.rs  mod.rs
src/sage_reference/: bn254_reference.json  division.sage  facts.sage  frobenius.sage  g1.sage  g2.sage  ref.sage  svdw.sage  utils.sage
src/scalar/: const_choice.rs  inverter.rs  mod.rs  scalar.rs
