[package]
authors = ["Tristan Britt <hello@tbritt.xyz>", "0xAlcibiades <alcibiades.eth@protonmail.com>"]
categories = ["cryptography", "mathematics"]
description = "Implementation of the BLS signature scheme using the alt-bn128 curve."
homepage = "https://github.com/warlock-labs/sylow"
keywords = ["alt-bn128", "zero-knowledge", "cryptography", "elliptic-curve", "pairing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/warlock-labs/sylow.git"
name = "sylow"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "dkg"
path = "examples/dkg.rs"

[[example]]
name = "fields"
path = "examples/fields.rs"

[[example]]
name = "key"
path = "examples/key.rs"

[[example]]
name = "basic_pairing"
path = "examples/basic_pairing.rs"

[dependencies]
num-traits = "0.2.19"
subtle = "2.6.1"
crypto-bigint = "0.6.0-rc.2"
sha3 = "0.11.0-pre.4"
lazy_static = "1.5.0"
tracing = "0.1.40"

[dev-dependencies]
hex-literal = "0.4.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.11.0-pre.4"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
confy = "0.6.1"
proptest = "1.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
dudect-bencher = "0.6.0"
rand = "0.8.5"

[[bench]]
name = "mod"
harness = false

[profile.bench]
debug = true
