[package]
authors = ["Tristan Britt <hello@tbritt.xyz>", "0xAlcibiades <alcibiades.eth@protonmail.com>"]
categories = ["cryptography", "mathematics"]
description = "Implementation of the BLS signature scheme using the alt-bn128 curve."
homepage = "https://github.com/warlock-labs/sylow"
keywords = ["alt-bn128", "zero-knowledge", "cryptography", "elliptic-curve", "pairing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/warlock-labs/sylow.git"
name = "sylow"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "dkg"
path = "examples/dkg.rs"

[[example]]
name = "fields"
path = "examples/fields.rs"

[dependencies]
crypto-bigint = "0.6.0-rc.2"
lazy_static = "1.5.0"
num-traits = "0.2.19"
sha3 = "0.11.0-pre.4"
subtle = "2.6.1"
tracing = "0.1.40"

[dev-dependencies]
confy = "0.6.1"
criterion = { version = "0.5", features = ["html_reports"] }
dudect-bencher = "0.6.0"
proptest = "1.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.11.0-pre.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bench]]
name = "mod"
harness = false

[profile.bench]
# TODO(Why, it seems like we'd want to bench in max performance mode)
debug = true